<resources>
    <string name="app_name">Pcs-aos</string>

    <string name="title_admin">Admin(login and password)</string>
    <string name="title_user">User(login and password)</string>
    <string name="title_user_phone_number">User(login and phone number)</string>
    <string name="title_user_secret_digit">User(login and secret digit)</string>
    <string name="title_authentication_method">Choose authentication method</string>
    <string name="title_authentication_settings">Settings</string>
    <string name="title_registration">Registration</string>
    <string name="title_logout">Logout</string>

    <string name="text_button_ok">OK</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_select_authentication_method">Select authentication method</string>
    <string name="text_set_default_authentication_method">Set default authentication method</string>
    <string name="text_create_account">Create account</string>
    <string name="text_role">Role:</string>
    <string name="text_admin">Admin</string>
    <string name="text_user">User</string>
    <string name="text_user_created">User created</string>
    <string name="text_login">Login</string>
    <string name="text_generated_number">Generated number:</string>
    <string name="text_send_code">Send code</string>
    <string name="text_hi">Hi</string>
    <string name="text_if_you_have_an_account">If you have an account,</string>
    <string name="text_select">select</string>
    <string name="text_authorization_method_and_login">authorization method and login</string>

    <string name="content_description_icon">Icon user with key</string>

    <string name="hint_login_text">Login</string>
    <string name="hint_password_text">Password</string>
    <string name="hint_confirm_password_text">Confirm password</string>
    <string name="hint_secret_number_text">Secret number</string>
    <string name="hint_phone_number_text">Phone number</string>
    <string name="hint_sum_of_numbers_text">Sum of numbers</string>
    <string name="hint_code_text">Code</string>

    <string name="error_phone_number_is_empty">Phone number can not be empty</string>
    <string name="error_secret_number_is_empty">Secret number can not be empty</string>
    <string name="error_password_is_empty">Password can not be empty</string>
    <string name="error_password_is_too_small">Password must be at least 6 characters in length</string>
    <string name="error_password_does_not_match_the_confirm_password">Password does not match the confirm password</string>
    <string name="error_login_is_empty">Login cannot be empty</string>
    <string name="error_login_is_too_small">Login must be at least 6 characters in length</string>
    <string name="error_phone_number_is_incorrect">Phone number is incorrect</string>
    <string name="error_code_is_empty">Code cannot be empty</string>
    <string name="error_sum_is_empty">Sum cannot be empty</string>

</resources>
